# kafka_proxy

./: Cargo.toml  DESIGN.md  README.md  build.sh  ca.pem  client1.p12  client1.pem  client1_key.pem  client2.p12  client2.pem  client2_key.pem  client_mtls_scram256.properties  client_ssl_mtls.properties  client_ssl_oneway.properties  config.yaml  key.pem  server.pem  server_key.pem  test
config-templates/: 01-client-plaintext-noauth_upstream-saslssl-plain.yaml  02-client-saslssl-scram_upstream-saslssl-plain.yaml  03-client-saslplaintext-plain_upstream-saslssl-plain.yaml  04-client-mtls-with-sasl-scram256-server-saslssl-plain.yaml  05-client-ssl-onewaytls_upstream-saslssl-plain.yaml  06-client-ssl-mtls_upstream-saslssl-plain.yaml  07-client-plaintext-noauth_upstream-plaintext-noauth.yaml
src/: auth.rs  certs.rs  cli.rs  config.rs  env_expand.rs  hosts.rs  kafka_io.rs  lib.rs  main.rs  proxy.rs  rewrite.rs  stats.rs  upstream.rs
