[package]
name = "kafka_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
kafka-protocol = { version = "0.17", features = ["messages_enums"] }
bytes = "1.11"
rustls-native-certs = "0.8"
rcgen = "0.13"
time = "0.3"
regex = "1.11"
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
x509-parser = "0.16"
